crates/no_unwrap_or_else_panic/examples/fail_unwrap_in_rstest_non_test_module.stderr
error: Replace unwrap_or_else on `std::option::Option<&str>` with a non-panicking fallback.
  --> $DIR/fail_unwrap_in_rstest_non_test_module.rs:25:13
   |
LL |       let _ = parsed.unwrap_or_else(|| {
   |  _____________^
LL | |         let ordinary: Option<&str> = None;
LL | |         ordinary.unwrap()
LL | |     });
   | |______^
   |
note: The closure supplied to unwrap_or_else triggers a panic.
  --> $DIR/fail_unwrap_in_rstest_non_test_module.rs:25:13
   |
LL |     let _ = parsed.unwrap_or_else(|| {
   |             ^^^^^^
   = help: Propagate the error or use expect with a descriptive message instead of panicking.
note: the lint level is defined here
  --> $DIR/fail_unwrap_in_rstest_non_test_module.rs:13:10
   |
LL |     deny(no_unwrap_or_else_panic)
   |          ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

